force-app/main/default/objects/CSO_Tracking__c/CSO_Tracking__c.object-meta.xml
<CustomObject>
    <description>Tracking for eligibility for CSO and the status of the Client Registration</description>
    <label>CSO Tracking</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CSO Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSO Recs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>