force-app/main/default/objects/CSO_Tracking__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CSO Recs</relationshipLabel>
    <relationshipName>CSO_Recs</relationshipName>
    <type>Lookup</type>
</CustomField>