force-app/main/default/objects/CSO_Tracking__c/fields/BankingInfoCompleted__c.field-meta.xml
<CustomField>
    <fullName>BankingInfoCompleted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the Banking Information Completed step was first done.</inlineHelpText>
    <label>Banking Info Completed</label>
    <type>DateTime</type>
</CustomField>