force-app/main/default/objects/CSO_Tracking__c/fields/BankingInfoLatest__c.field-meta.xml
<CustomField>
    <fullName>BankingInfoLatest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The latest date the Banking Information step was completed. This is in case they go to the step again</inlineHelpText>
    <label>Banking Info Latest</label>
    <type>DateTime</type>
</CustomField>