force-app/main/default/objects/CSO_Tracking__c/fields/ChildType__c.field-meta.xml
<CustomField>
    <fullName>ChildType__c</fullName>
    <description>What type of child relationship does this have with the parent? If it&apos;s a combo, we need to identify which account is deemed the parent.</description>
    <label>Child Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Parent-Child</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
            <value>
                <fullName>Related/Common</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>