force-app/main/default/objects/CSO_Tracking__c/fields/Client_Require_Non_English_Paperwork__c.field-meta.xml
<CustomField>
    <fullName>Client_Require_Non_English_Paperwork__c</fullName>
    <label>Client Require Non-English Paperwork</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>