force-app/main/default/objects/CSO_Tracking__c/fields/ClientUnstalledLatest__c.field-meta.xml
<CustomField>
    <fullName>ClientUnstalledLatest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The latest date we get the Client Unstalled notification</inlineHelpText>
    <label>Client Unstalled Latest</label>
    <type>DateTime</type>
</CustomField>