force-app/main/default/objects/CSO_Tracking__c/fields/CPQProcessing__c.field-meta.xml
<CustomField>
    <fullName>CPQProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When we submit the subscription (both for the sending the keys and starting the actual subscription). So the form knows it&apos;s in process.</inlineHelpText>
    <label>CPQ Processing</label>
    <type>Checkbox</type>
</CustomField>