force-app/main/default/objects/CSO_Tracking__c/fields/CPQSubEnd__c.field-meta.xml
<CustomField>
    <fullName>CPQSubEnd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The end time of the call to CPQ to start the OSS Subscription</inlineHelpText>
    <label>CPQ Sub End</label>
    <type>DateTime</type>
</CustomField>