force-app/main/default/objects/CSO_Tracking__c/fields/CPQSubStart__c.field-meta.xml
<CustomField>
    <fullName>CPQSubStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The start time of the call to CPQ to start the OSS Subscription</inlineHelpText>
    <label>CPQ Sub Start</label>
    <type>DateTime</type>
</CustomField>