force-app/main/default/objects/CSO_Tracking__c/fields/DocMSAReceived__c.field-meta.xml
<CustomField>
    <fullName>DocMSAReceived__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the Documents MSA was first received.</inlineHelpText>
    <label>Doc MSA Received</label>
    <type>DateTime</type>
</CustomField>