force-app/main/default/objects/CSO_Tracking__c/fields/EntRegTest__c.field-meta.xml
<CustomField>
    <fullName>EntRegTest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>** TESTING ONLY ** To test the enterprise registration call to OIC</inlineHelpText>
    <label>Test Ent Reg</label>
    <type>Checkbox</type>
</CustomField>