force-app/main/default/objects/CSO_Tracking__c/fields/ExceptionRequestUser__c.field-meta.xml
<CustomField>
    <fullName>ExceptionRequestUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exception Requested By?</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CSO_Recs</relationshipName>
    <type>Lookup</type>
</CustomField>