force-app/main/default/objects/CSO_Tracking__c/fields/FirstPayrollRun__c.field-meta.xml
<CustomField>
    <fullName>FirstPayrollRun__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date the First Payroll Run step is first completed.</inlineHelpText>
    <label>First Payroll Run</label>
    <type>DateTime</type>
</CustomField>