force-app/main/default/objects/CSO_Tracking__c/fields/HasSubscriptionQuote__c.field-meta.xml
<CustomField>
    <fullName>HasSubscriptionQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>At least one of the quotes attached to the Opportunity has IsSubscriptionQuote__c = true</inlineHelpText>
    <label>Has Subscription Quote</label>
    <type>Checkbox</type>
</CustomField>