force-app/main/default/objects/CSO_Tracking__c/fields/InitialValidationDetail__c.field-meta.xml
<CustomField>
    <fullName>InitialValidationDetail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If the client validation response does not come back successful, this is the message that was returned.</inlineHelpText>
    <label>Client Validation Detail</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>