force-app/main/default/objects/CSO_Tracking__c/fields/IsParentTracker__c.field-meta.xml
<CustomField>
    <fullName>IsParentTracker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this have any child trackers?</inlineHelpText>
    <label>Is Parent Tracker</label>
    <type>Checkbox</type>
</CustomField>