force-app/main/default/objects/CSO_Tracking__c/fields/IsSameFEIN__c.field-meta.xml
<CustomField>
    <fullName>IsSameFEIN__c</fullName>
    <formula>OR (AND( ParentAccount__c != null, ISPICKVAL( ChildType__c, &quot;Combo&quot;))
,AND (ParentAccount__c != null, ParentAccount__r.Federal_ID_Number__c != null, AccountId__r.Federal_ID_Number__c != null , ParentAccount__r.Federal_ID_Number__c = AccountId__r.Federal_ID_Number__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the relationship with its parent a Same FEIN/Combo relationship?</inlineHelpText>
    <label>Is Same FEIN?</label>
    <type>Checkbox</type>
</CustomField>