force-app/main/default/objects/CSO_Tracking__c/fields/Onboarding_Tool__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Tool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Tool</label>
    <referenceTo>Onboarding_Tool__c</referenceTo>
    <relationshipLabel>CSO Recs</relationshipLabel>
    <relationshipName>CSO_Recs</relationshipName>
    <type>Lookup</type>
</CustomField>