force-app/main/default/objects/CSO_Tracking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CSO Tracking Recs</relationshipLabel>
    <relationshipName>CSO_Tracking_Recs</relationshipName>
    <type>Lookup</type>
</CustomField>