force-app/main/default/objects/CSO_Tracking__c/fields/ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>For a Same FEIN (Combo) relationship, which account is the parent (client record)?</inlineHelpText>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CSO Recs (Parent Account)</relationshipLabel>
    <relationshipName>CSORecsChildren</relationshipName>
    <type>Lookup</type>
</CustomField>