force-app/main/default/objects/CSO_Tracking__c/fields/ParentTracker__c.field-meta.xml
<CustomField>
    <fullName>ParentTracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this is for a multi-id client, these are all the related trackers to use to track the transactions.</inlineHelpText>
    <label>Parent Tracker</label>
    <referenceTo>CSO_Tracking__c</referenceTo>
    <relationshipLabel>Child Trackers</relationshipLabel>
    <relationshipName>CSORecs</relationshipName>
    <type>Lookup</type>
</CustomField>