force-app/main/default/objects/CSO_Tracking__c/fields/PriorPayrollCompleted__c.field-meta.xml
<CustomField>
    <fullName>PriorPayrollCompleted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The first time the Prior Payroll Completed step was done.</inlineHelpText>
    <label>Prior Payroll Completed</label>
    <type>DateTime</type>
</CustomField>