force-app/main/default/objects/CSO_Tracking__c/fields/Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle__c</fullName>
    <inlineHelpText>Which product bundle was selected?</inlineHelpText>
    <label>Product Bundle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paychex Flex Select</fullName>
            </value>
            <value>
                <fullName>Express Payroll Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>