force-app/main/default/objects/CSO_Tracking__c/fields/ProductsValidated__c.field-meta.xml
<CustomField>
    <fullName>ProductsValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProductsValidated</label>
    <type>Checkbox</type>
</CustomField>