force-app/main/default/objects/CSO_Tracking__c/fields/RegistrationStart__c.field-meta.xml
<CustomField>
    <fullName>RegistrationStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The start date/time of the latest registration attempt</inlineHelpText>
    <label>Registration Start</label>
    <type>DateTime</type>
</CustomField>