force-app/main/default/objects/CSO_Tracking__c/fields/RevertToPACO__c.field-meta.xml
<CustomField>
    <fullName>RevertToPACO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Support only:  check this box for any Sales help requests for Reverts</inlineHelpText>
    <label>Revert To PACO</label>
    <type>Checkbox</type>
</CustomField>