force-app/main/default/objects/CSO_Tracking__c/fields/SSTValidated__c.field-meta.xml
<CustomField>
    <fullName>SSTValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSTValidated</label>
    <type>Checkbox</type>
</CustomField>