force-app/main/default/objects/CSO_Tracking__c/fields/TestShippingValidation__c.field-meta.xml
<CustomField>
    <fullName>TestShippingValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Send an address validation request for the shipping address. Can be combined with the Billing Address validation</inlineHelpText>
    <label>Test Shipping Validation</label>
    <type>Checkbox</type>
</CustomField>