force-app/main/default/objects/CSO_Tracking__c/fields/ValidationSeconds__c.field-meta.xml
<CustomField>
    <fullName>ValidationSeconds__c</fullName>
    <formula>IF (NOT(ISBLANK(ValidationEnd__c)), (ValidationEnd__c -  ValidationStart__c) *24*60*60
  , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of seconds it took for the validation to complete</inlineHelpText>
    <label>Validation Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>