force-app/main/default/objects/CSO_Tracking__c/listViews/CPQ_Key_Failed.listView-meta.xml
<ListView>
    <fullName>CPQ_Key_Failed</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CPQKeysStatusCode__c</columns>
    <columns>CPQKeysStart__c</columns>
    <columns>CPQKeysEnd__c</columns>
    <columns>CPQKeysSeconds__c</columns>
    <columns>CPQKeysDetail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>CPQKeysStatusCode__c</field>
        <operation>notEqual</operation>
        <value>200</value>
    </filters>
    <filters>
        <field>CPQKeysStatusCode__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>CPQ Key Failed</label>
</ListView>