force-app/main/default/objects/CSO_Tracking__c/listViews/CPQ_Sub_Failed.listView-meta.xml
<ListView>
    <fullName>CPQ_Sub_Failed</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CPQSubStart__c</columns>
    <columns>CPQSubEnd__c</columns>
    <columns>CPQSubStatusCode__c</columns>
    <columns>CPQSubSeconds__c</columns>
    <columns>CPQSubDetail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <filters>
        <field>CPQSubStatusCode__c</field>
        <operation>notEqual</operation>
        <value>200</value>
    </filters>
    <filters>
        <field>CPQSubStatusCode__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>CPQ Sub Failed</label>
</ListView>