force-app/main/default/objects/CSO_Tracking__c/listViews/CreatedToday.listView-meta.xml
<ListView>
    <fullName>CreatedToday</fullName>
    <columns>NAME</columns>
    <columns>CanUseCSO__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>FirstPayrollRun__c</columns>
    <columns>Opportunity_Eligible__c</columns>
    <columns>RegistrationStarted__c</columns>
    <columns>ExceptionStatus__c</columns>
    <columns>Product_Bundle__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>