force-app/main/default/objects/CSO_Tracking__c/listViews/CSO_Recs_edit_rep_name_view.listView-meta.xml
<ListView>
    <fullName>CSO_Recs_edit_rep_name_view</fullName>
    <columns>NAME</columns>
    <columns>CanUseCSO__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>FirstPayrollRun__c</columns>
    <columns>CSO_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>8/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Berner</value>
    </filters>
    <label>CSO Recs - edit &quot;rep name&quot; view</label>
</ListView>