force-app/main/default/objects/CSO_Tracking__c/listViews/Last_N_Days.listView-meta.xml
<ListView>
    <fullName>Last_N_Days</fullName>
    <columns>NAME</columns>
    <columns>CanUseCSO__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LatestAction__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>FirstPayrollRun__c</columns>
    <columns>Opportunity_Eligible__c</columns>
    <columns>QuoteSigned__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:2</value>
    </filters>
    <label>Last N Days</label>
</ListView>