force-app/main/default/objects/CSO_Tracking__c/listViews/Modified_Today.listView-meta.xml
<ListView>
    <fullName>Modified_Today</fullName>
    <columns>NAME</columns>
    <columns>CanUseCSO__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>FirstPayrollRun__c</columns>
    <columns>CSO_Status__c</columns>
    <columns>Opportunity_Eligible__c</columns>
    <columns>ClientDataValidated__c</columns>
    <columns>ProcessNotes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Modified Today</label>
</ListView>