force-app/main/default/objects/CSO_Tracking__c/listViews/OSS_Keys_Retrieved.listView-meta.xml
<ListView>
    <fullName>OSS_Keys_Retrieved</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OSSKeysStatusCode__c</columns>
    <columns>OSSKeysStart__c</columns>
    <columns>OSSKeysEnd__c</columns>
    <columns>OSSKeysDetail__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <filters>
        <field>OSSKeysStatusCode__c</field>
        <operation>equals</operation>
        <value>200</value>
    </filters>
    <label>OSS Keys Retrieved</label>
</ListView>