force-app/main/default/objects/CSO_Tracking__c/listViews/Subscriptions.listView-meta.xml
<ListView>
    <fullName>Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>CanUseCSO__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>LatestAction__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>QuoteSigned__c</columns>
    <columns>RegistrationStatusCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OSSKeysStart__c</columns>
    <columns>OSSKeysStatusCode__c</columns>
    <columns>OSSKeysDetail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <filters>
        <field>HasSubscriptionQuote__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Subscriptions</label>
</ListView>